# LucidOBS

./: .gitignore  DEVLOG.md  LICENCE  LICENSE  README.md  docker-compose.yml  pyproject.toml
configs/: otel-collector.yaml
configs/grafana/dashboards/: icu_overview.json  latest_events.json  patient_detail.json
configs/grafana/provisioning/alerting/: lucidobs_alerts.yaml
configs/grafana/provisioning/dashboards/: dashboards.yaml
src/lucidobs/: cli.py
src/lucidobs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/lucidobs/telemetry/: generator.py  metrics.py  models.py  scenarios.py
