[project]
name = "lucidobs"
version = "0.1.0"
description = "LucidOPS:ICU telemetry observability demo (OTel, Prometheus, Grafana, Loki)."
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.3",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp>=1.27.0",
]
readme = "README.md"

[project.scripts]
lucidobs = "lucidobs.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"